--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,6 +1,7 @@
 %h1 hello!
 
 -@posts.each do |post|
+  = link_to (image_tag post.image.url(:small))
   %h2= link_to post.title, post
 
 = link_to "Add new Inspiration", new_post_path
