Convert app layout to haml and add header

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -7,7 +7,7 @@
     = post.comments.count
     Comments
   %p
-    = post.get_like.size
+    = post.get_likes.size
     Likes
 
 = link_to "Add new Inspiration", new_post_path
