--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,13 +1,34 @@
-%h1 hello!
+- if user_signed_in?
+  %p#intro
+    Hello
+    = current_user.name
+    %br/
+    %span
+      Share your inspiration and see what's inspiring others.
+- else
+  %p#intro
+    What's your name?
+    %br/
+    %span
+      Share your inspiration and see what's inspiring others.
 
--@posts.each do |post|
-  = link_to (image_tag post.image.url(:small))
-  %h2= link_to post.title, post
-  %p
-    = post.comments.count
-    Comments
-  %p
-    = post.get_likes.size
-    Likes
-
-= link_to "Add new Inspiration", new_post_path
+#posts
+  - @posts.each do |post|
+    .post
+      .post_image
+        = link_to (image_tag post.image.url(:small)), post
+      .post_content
+        .title
+          %h2= link_to post.title, post
+        .data.clearfix
+          %p.username
+            Shared by
+            = post.user.name
+          %p.buttons
+            %span
+              %span
+                %i.fa.fa-comments-o
+                = post.comments.count
+              %span
+                %i.fa.fa-thumbs-o-up
+                = post.get_likes.size
